<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dr.Q-Muller</string>
    <string name="welcome">Welcome to\nDr.Q-Muller</string>
    <string name="update">Ứng dụng của quí khách cần được cập nhật để tiếp tục sử dụng</string>
    <string name="update_button">Cập nhật</string>
    <!-- LOGIN -->
    <string name="login_fail">Tên đăng nhập hoặc mật khẩu không đúng</string><!-- TODO change to proper sentence -->

    <string name="username_input_hint">Tên Đăng Nhập</string>
    <string name="username_unavailable">Tên đăng nhập đã được sử dụng</string>
    <string name="pattern_fail">Tên đăng nhập hoặc mật khẩu không hợp lệ</string><!-- TODO change to proper sentence -->
    <string name="username_null">Xin vui lòng nhập tên đăng nhập</string>
    <string name="username_requirement">Tên đăng nhập bao gồm chữ, sô, dấu - và _ (ít nhất 8 kí tự)</string>

    <string name="password_input_hint">Mật Khẩu</string>
    <string name="password_requirement">Mật khẩu gồm chữ và số (ít nhất 8 kí tự)</string>
    <string name="password_null">Xin vui lòng nhập mật khẩu</string>

    <string name="password_confirm_hint">Xác Nhận Mật Khẩu</string>
    <string name="password_confirm_requirement">Mật khẩu không trùng khớp</string>
    <string name="password_confirm_null">Xin vui lòng xác nhận lại mật khẩu</string>

    <string name="sign_in_button">Đăng Nhập</string>
    <string name="sign_up_button">Đăng Ký</string>
    <string name="next_button">Tiếp Tục</string>
    <string name="change_button">Thay Đổi</string>
    <string name="resend_email_button">Gửi Email Kích Hoạt</string>
    <string name="change_email_button">Thay Đổi Email</string>

    <string name="phone_hint">Số Điện Thoại</string>
    <string name="phone_null">Xin vui lòng nhập số điện thoại</string>
    <string name="phone_requirement">Số điện thoại không hợp lệ</string>
    <string name="phone_important">Vui lòng nhập chính xác số điện thoại\nTrung tâm sẽ liên lạc để xác nhận lịch hẹn</string>

    <string name="address_hint">Địa Chỉ</string>
    <string name="address_null">Xin vui lòng nhập địa chỉ</string>
    <string name="address_requirement">Không dùng kí tự đặc biệt ngoại trừ -, ., \'</string>

    <string name="email_hint">Email</string>
    <string name="email_null">Xin vui lòng nhập email</string>
    <string name="email_requirement">Email không hợp lệ</string>

    <string name="name_hint">Họ và Tên</string>
    <string name="name_null">Xin vui lòng nhập họ và tên</string>
    <string name="name_requirement">Không dùng số hoặc kí tự đặc biệt ngoại trừ dấu - và .</string>

    <string name="gender">Giới Tính</string>
    <string name="gender_null">Xin vui lòng chọn giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>

    <string name="dob">Ngày Sinh</string>
    <string name="dob_null">Xin vui lòng chọn ngày sinh</string>

    <string name="remember_me">Ghi Nhớ</string>
    <string name="forget_password">Quên Mật Khẩu</string>

    <string name="validate_noti_fail">Gửi email không thành công\nVui lòng kiểm tra lại mạng, email hoặc gửi lại email</string>
    <string name="validate_noti_success">Gửi email thành công\nVui lòng kiểm tra email để kích hoạt tài khoản</string>
    <string name="send_mail_again">Xin quí khách vui lòng gửi lại email</string>
    <string name="update_fail">Cập nhật thất bại</string>
    <string name="validate_back_to_register">Trở Về Trang Đăng Nhập</string>

    <!-- RESET PASSOWRD ACTIVITY -->
    <string name="resetpw_send_mail_button">Gửi Email Khôi Phục</string>
    <string name="resetpw_reset_pw_button">Khôi Phục</string>
    <string name="reset_success">Khôi phục mật khẩu thành công</string>
    <string name="reset_fail">Khôi phục mật khẩu thất bại</string>
    <string name="email_reset_fail">Gửi email không thành công\nTài khoản không tồn tại hoặc không có email liên hệ</string>
    <string name="email_reset_success">Gửi email thành công\nVui lòng kiểm tra email để khôi phục tài khoản</string>

    <!-- REGISTER PASSOWRD ACTIVITY -->
    <string name="verify_success">Kích hoạt tài khoản thành công</string>
    <string name="verify_fail">Kích hoạt tài khoản thất bại</string>
    <string name="verify_already">Tài khoản đã được kích hoạt</string>

    <!-- NEWS TAB -->
    <string name="news_tab">Mới</string>

    <!-- USER TAB -->
    <string name="user_tab">Tài Khoản</string>
    <string name="user_name">Tên Khách Hàng</string>
    <string name="user_detail">Xem Và Sửa Đổi Thông Tin Cá Nhân</string>
    <string name="user_option_bag">Thông Tin Lịch Hẹn</string>
    <string name="user_option_logout">Đăng Xuất</string>

    <!-- BOOKING ACTIVITY -->
    <string name="booking_tab">Lịch Hẹn</string>
    <string name="booking_country_hint">Chọn Quốc Gia</string>
    <string name="booking_city_hint">Chọn Thành Phố</string>
    <string name="booking_district_hint">Chọn Quận</string>
    <string name="booking_location_hint">Chọn Địa Điểm</string>
    <string name="booking_voucher_hint">Chọn Voucher</string>
    <string name="booking_type_hint">Chọn Phương Thức</string>
    <string name="booking_type_free">Tự do</string>
    <string name="booking_type_fixed">Cố định</string>
    <string name="booking_machine_hint">Chọn Máy</string>
    <string name="booking_start_date">Ngày Bắt Đầu</string>
    <string name="booking_expire_date">Ngày Kết Thúc</string>
    <string name="booking_do_date">Ngày Thực Hiện</string>
    <string name="booking_date_hint">Chọn Ngày</string>
    <string name="booking_date_invalid">Ngày được chọn không phù hợp</string>
    <string name="out_of_schedule">Hôm nay không còn giờ phù hợp</string>
    <string name="booking_error_date">Ngày không hợp lệ. Xin vui lòng chọn lại</string>
    <string name="booking_error_eco_date">Hiện tại voucher Eco không thể đặt lịch Thứ 7 và Chủ Nhật</string>
    <string name="missing_detail">Vui lòng điền đầy đủ thông tin</string>
    <string name="monday">Thứ Hai</string>
    <string name="tuesday">Thứ Ba</string>
    <string name="wednesday">Thứ Tư</string>
    <string name="thursday">Thứ Năm</string>
    <string name="friday">Thứ Sáu</string>
    <string name="empty_cart">Giỏ Hàng Trống</string>
    <string name="list_cart">Đã Đặt</string>
    <string name="max_item">Tối đa 3 lịch hẹn</string>
    <string name="min_item">Vui lòng chọn ít nhất một thời gian cụ thể</string>
    <string name="selected_day">Tối đa 1 giờ trong 1 ngày</string>
    <string name="finish_button">Hoàn Tất</string>
    <string name="booking_confirm_hint">Nhập Mã Xác Nhận</string>
    <string name="booking_confirm_button">Xác Nhận</string>
    <string name="booking_confirm_instruction">Quí khách vui lòng chờ bộ phận tiếp tân của trung tâm liên lạc trong giây lát</string>
    <string name="not_confirm_yet">Chưa Xác Nhận</string>
    <string name="confirmed">Đã Xác Nhận</string>
    <string name="booking_success">Quí khách đã đặt lịch hẹn thành công</string>
    <string name="booking_fail">Nhập mã xác nhận chưa hoàn tất\nQuí khách có thể bấm vào thông tin lịch hẹn trong trang chủ để hoàn thành xác nhận</string>
    <string name="close_dialog">Đóng</string>
    <string name="agree_button">Đồng Ý</string>
    <string name="temp_inform">Hiện tại Dr.Q-Muller chỉ có 1 trung tâm tại Quận 3, Việt Nam</string>
    <string name="already_booked">Giờ đã bị đặt</string>
    <string name="abort_appointment_dialog">Quí khách có chắc chắn muốn hủy bỏ toàn bộ lịch hẹn và thoát?</string>
    <string name="machine_alert">Quí khách vui lòng chọn máy</string>
    <string name="invalid_token">Xác nhận tài khoản không thành công. Xin quí khách vui lòng đăng nhập lại</string>

    <!-- BOOKING DETAILS -->
    <string name="address">Địa Điểm</string>
    <string name="voucher">Voucher</string>
    <string name="type">Phương Thức</string>
    <string name="from_date">Từ</string>
    <string name="to_date">Đến</string>
    <string name="appointment">Lịch Hẹn</string>
    <string name="confirm_code">Mã Xác Nhận</string>
    <string name="bill">Hóa Đơn</string>
    <string name="empty_appointment">Quí khách hiện chưa có lịch hẹn nào</string>
    <string name="cancel_appointment">Hủy lịch hẹn</string>
    <string name="cancel_confirm">Quí khách có chắc chắn muốn hủy bỏ lịch hẹn này?</string>
    <string name="detail_appointment">Chi tiết</string>

    <!-- BOOKING CONFIRM -->
    <string name="empty_code">Quí khách chưa nhập mã xác nhận</string>
    <string name="wrong_code">Mã xác nhận không chính xác</string>

    <!-- USER DETAILS -->
    <string name="abort_button">Hủy Bỏ</string>
    <string name="edit_button">Chỉnh sửa</string>
    <string name="save_button">Lưu</string>
    <string name="no_button">Không</string>

    <!-- ********************************FRAGMENT******************************** -->
    <!-- DEFAULT APPOINTMENT -->
    <string name="start_booking">Đặt lịch</string>
    <string name="abort_booking">Hủy bỏ</string>
    <!-- DIALOG APPOINTMENT -->
    <string name="none">Không có</string>

    <!-- NETWORK -->
    <string name="no_network_connection">Hiện tại quí khách không có kết nối mạng</string>
    <string name="try_connect_again">Thử lại</string>

</resources>
