<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_back_button"
            android:elevation="0dp"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:gravity="center_horizontal" />

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:datePickerMode="spinner"
            android:spinnersShown="true"
            android:calendarViewShown="false"
            style="@android:style/Widget.Material.DatePicker" />

        <TextView
            android:text="@string/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:gravity="center_horizontal" />


        <RadioGroup
            android:id="@+id/ui_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <RadioButton
                android:id="@+id/ui_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:button="@null"
                android:drawableEnd="@android:drawable/btn_radio"
                android:drawableStart="@drawable/ic_user"
                />
            <RadioButton
                android:id="@+id/ui_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:button="@null"
                android:drawableEnd="@android:drawable/btn_radio"
                android:drawableStart="@drawable/ic_user"
                />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/ui_next_button_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="30dp"
                android:padding="12dp"
                android:text="@string/next_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>